--- a/style.css
+++ b/style.css
@@ -5,16 +5,16 @@
     }
 
     body {
-    background-color: url("img/bg-desktop.webp");
+    background-color: url('/tmp/guest-9dskw1/Downloads/e98e2081c185374e4a629c4f1d133f35.jpg');
     font-family: Bai jamjuree;
     }
 
-    #container{
+    #container {
      display: flex
-     flex-wrap; wrap:
-     justify-content; space-between;
+     flex-wrap: wrap;
+     justiy-content: space-between;
      padding: 4rem;
-     gap: 3rem;
+     gap: 3rem
     }
 
     .cartao {
@@ -24,7 +24,7 @@
     flex-basis: calc(33% - 6rem);
     }
 
-    .cartao__conteudo h3 {
+    .cartao__conteudo {
      background-color: var(--card-front-color);
      text-align: center;
      /*background-color: aquamarine; */
@@ -51,7 +51,7 @@
         margin-top: 4rem;
         font-size: 1.4vw;
     }
-    #container {
+    
 
     .cartao__conteudo__pergunta p {
      Color: var(--text-color);
