--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
     }
 
     body {
-    background-color: url('/tmp/guest-9dskw1/Downloads/e98e2081c185374e4a629c4f1d133f35.jpg');
+    background-color: url('https://www.google.com/url?sa=i&url=https%3A%2F%2Fbr.freepik.com%2Ffotos-vetores-gratis%2Fpsicologia&psig=AOvVaw2a2spmbpDAh0wJR717Nzd0&ust=1730201750317000&source=images&cd=vfe&opi=89978449&ved=0CBEQjRxqFwoTCMjC7ff9sIkDFQAAAAAdAAAAABAE');
     font-family: Bai jamjuree;
     }
 
