--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
     }
 
     body {
-    background-color: url('https://www.google.com/url?sa=i&url=https%3A%2F%2Fbr.freepik.com%2Ffotos-vetores-gratis%2Fpsicologia&psig=AOvVaw2a2spmbpDAh0wJR717Nzd0&ust=1730201750317000&source=images&cd=vfe&opi=89978449&ved=0CBEQjRxqFwoTCMjC7ff9sIkDFQAAAAAdAAAAABAE');
+    background-color: url('/tmp/guest-r811xn/Downloads/representacao-do-processo-e-conceito-da-mente-coletiva-no-estilo-de-arte-digital_23-2151657670.avif');
     font-family: Bai jamjuree;
     }
 
